# geecxx

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  abstractconnection.cpp  abstractconnection.h  bot.cpp  bot.h  configurationprovider.cpp  configurationprovider.h  connection.cpp  connection.h  curl.cpp  curl.h  defines.h  globalconfig.h.in  htmlentitieshelper.cpp  htmlentitieshelper.h  logger.cpp  logger.h  loggerconfig.h.in  main.cpp  stringutils.cpp  stringutils.h  urlhistorymanager.cpp  urlhistorymanager.h  webinforetriever.cpp  webinforetriever.h
tests/: CMakeLists.txt  connectiontest.cpp  connectiontest.h  main.cpp  testconfig.h.in  urlhistorymanagertest.cpp  urlhistorymanagertest.h
